# Bitcoin-PIR

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  GLOSSARY.md  PLAN_ANONYMOUS_RATE_LIMIT.md  PLAN_CHUNK_MAX_CLOSURE.md  PLAN_HARMONY_COUNT_LEAK_FIX.md  PLAN_LEAKAGE_VERIFICATION.md  PLAN_MERKLE_CODING.md  PLAN_MERKLE_COLOCATION.md  PLAN_MULTI_QUERY_SIMULATOR_TEST.md  PLAN_ONION_SHARDING.md  PLAN_PIR2_UKI_V17.md  PUBLISHING.md  README.md  SDK_ROADMAP.md  fetch_log.txt  fix-pir.md  flake.nix  reverse_txid.py  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: audit.yml  build-determinism.yml  deploy-web.yml  pir-sdk-integration.yml  web-build.yml
attested-builder/: Cargo.toml  PLAN.md
attested-builder/coremuhash/: Cargo.toml
attested-builder/coremuhash/src/: chacha20.rs  lib.rs
attested-builder/fixtures/: README.md
attested-builder/rootbundle/: Cargo.toml
attested-builder/rootbundle/src/: lib.rs
batch_web_client/: index.html
bitcoinj-pir/: .gitignore  ONIONPIR_JNI_REQUEST.md  README.md  USAGE.md  build.gradle
block_reader/: Cargo.toml
block_reader/src/: block_stats.rs  utxo_delta.rs
bpir-admin/: Cargo.toml
bpir-admin/src/: attest.rs  channel_test.rs  db_proof.rs  keygen.rs  main.rs  show_vcek_url.rs  upload.rs
build_db/: .gitignore  Cargo.toml
build_db/src/: bitvector.rs  lib.rs  utils.rs
build_db/src/mpfh/: bitvector.rs  hashmap.rs  mod.rs  par_iter.rs
deploy/systemd/: pir-secondary.service  pir-vpsbg.service
doc/: BIP158.md  BIP158_IMPLEMENTATION.md  DEPLOYMENT.md  INDEX.md  LIGHT_CLIENT_DATA.md  NODE.md  PHASE1_COMPLETE.md  PHASE1_FINAL.md  PIR_AFTER_BIP158.md  PLAN.md  README.md  RUST_BIP158.md  UTXO_CHUNKS_PLAN.md  WEB.md
docs/: ATTESTED_BUILDER_TIER3_UKI.md  BDK_WALLET_PROTOTYPE.md  BUILD_REPRODUCIBILITY.md  CODE_REVIEW_2026-06.md  DB_BUILD_ATTESTATION_PLAN.md  ONIONPIR_PORT_MIGRATION.md  OPERATOR_IDENTITY.md  ORAM_CRASH_CONSISTENCY.md  ORAM_ENIGMAP_DEEPDIVE.md  ORAM_TEE_LEAKAGE_SKETCH.md  ORAM_TEE_SURVEY.md  ORAM_TIER3_PRODUCTION_HANDOFF.md  ORAM_VPSBG_TEST_RUN.md  PHASE3_ROADMAP.md  PHASE3_SLICE3_PLAN.md  PHASE3_SLICE3_RECOVERY.md  PHASE3_SLICE3_REPRO_PLAN.md  PIR1_REGISTER_KEYS_TRUNCATION.md  PLAN_scripthash_padding.md  RATELIMIT_DEMO.md  RATELIMIT_INTEGRATION.md  TEE_SINGLE_SERVER_ORAM.md  UPSTREAM_REQUEST_2402b16_REGRESSION.md  VERIFICATION_OVERVIEW.md  WIRE_ROUND_AND_BYTE_INVENTORY.md  fix_wasm_cuckoo.md  onionpir_key_sharing_question.md  onionpir_plan.md  release_checklist.md
docs/plans/: PLAN_ANONYMOUS_RATE_LIMIT.md  PLAN_CHUNK_MAX_CLOSURE.md  PLAN_HARMONY_COUNT_LEAK_FIX.md  PLAN_LEAKAGE_VERIFICATION.md  PLAN_MERKLE_CODING.md  PLAN_MERKLE_COLOCATION.md  PLAN_MULTI_QUERY_SIMULATOR_TEST.md  PLAN_ONION_SHARDING.md  PLAN_PIR2_UKI_V17.md  PLAN_scripthash_padding.md  README.md
docs/probes/: pir2-launch-2026-05-03.txt
dpf_pir/: Cargo.toml
dpf_pir/src/: database.rs  hash.rs  lib.rs  pir_backend.rs  pir_protocol.rs  protocol.rs  server_config.rs  websocket.rs
electrum_plugin/: mock_wallet_test.py  test_all_protocols.py  test_pir_client.py
electrum_plugin/pir_privacy/: __init__.py  manifest.json  pir_client.py  pir_common.py  pir_constants.py  pir_harmony_client.py  pir_hash.py  pir_onionpir_client.py  pir_plugin.py  pir_protocol.py  qt.py
explorer/: package-lock.json  test.ts
explorer/src/: utxo-provider.ts
harmonypir-wasm/: Cargo.toml
harmonypir-wasm/src/: lib.rs  state.rs
pdf/: build.sh  introduction.tex  main.aux  main.out  main.tex  part1_data.tex  part2_batching.tex  part3_2server.tex  part4_harmonypir.tex  part5_onionpir.tex  part6_comparison.tex  part7_deployment.tex  refs.bib
pir-attest-verify/: Cargo.toml  README.md
pir-attest-verify/src/: lib.rs
pir-channel/: Cargo.toml  README.md
pir-channel/src/: lib.rs
pir-core/: CHANGELOG.md  Cargo.toml  README.md
pir-core-wasm/: Cargo.toml
pir-core-wasm/src/: lib.rs
pir-core/src/: attest.rs  codec.rs  cuckoo.rs  hash.rs  lib.rs  merkle.rs  params.rs  pbc.rs  seeds.rs
pir-db-attest/: Cargo.toml
pir-db-attest/src/: lib.rs
pir-identity/src/: lib.rs
pir-runtime-core/: Cargo.toml  build.rs
pir-runtime-core/src/: admin.rs  attest.rs  cashu_verifier.rs  eval.rs  (+7 more)
pir-sdk/: CHANGELOG.md  Cargo.toml  README.md
pir-sdk-client/: CHANGELOG.md  Cargo.toml  README.md
pir-sdk-client/examples/: delta_sync.rs  fetch_addresses.rs  oram_local_smoke.rs  oram_make_fixture.rs  simple_query.rs
pir-sdk-client/src/: admin.rs  announce.rs  attest.rs  channel.rs  connection.rs  db_proof.rs  dpf.rs  harmony.rs  hint_cache.rs  lib.rs  merkle_verify.rs  onion.rs  onion_merkle.rs  oram.rs  protocol.rs  transport.rs  wasm_transport.rs
pir-sdk-client/tests/: integration_test.rs  leakage_integration_test.rs
pir-sdk-server/: CHANGELOG.md  Cargo.toml  README.md
pir-sdk-server/examples/: simple_server.rs
pir-sdk-server/src/: config.rs  lib.rs  loader.rs  server.rs
pir-sdk-wasm/: CHANGELOG.md  Cargo.toml  README.md  pir-sdk-wasm.d.ts
pir-sdk-wasm/src/: arc.rs  client.rs  lib.rs  metrics.rs  tracing_bridge.rs
pir-sdk/benches/: sync_plan.rs
pir-sdk/src/: backend.rs  client.rs  error.rs  leakage.rs  lib.rs  metrics.rs  sync.rs  types.rs
runtime/: Cargo.toml
runtime/src/: config.rs  eval.rs  hint_pool.rs  lib.rs  onionpir.rs  protocol.rs  table.rs  warmup.rs
scripts/: README.md  archive_uki_artifact.sh  build_db_manifest.sh  build_delta.sh  build_delta_onion.sh  build_full.sh  build_uki.sh  build_uki_attested_builder_tier3.sh  build_uki_tier3.sh  build_unified_server.sh  continue_fetch.py  extract_delta_examples.js  fetch_blocks.py.broken  fetch_blocks_v2.py  get_random_hash.sh  index_blocks.py  oram_local_smoke.sh  oram_vpsbg_test.sh  prepare-wasm-publish.sh  query_index.py  run_client.sh  smoke_db_proof_attestation.sh  start_pir_servers.sh  start_servers.sh  test_batch_pir_client.sh  test_lookup_pir.sh  test_lookup_script.sh  test_mphf.sh  verify_oram_tier3_deploy.sh
web/: index.html  node_modules  package-lock.json  package.json  reproduce.html  tsconfig.json  vite.config.js
web_client/: index.html  package-lock.json  package.json
(+118 files in other folders)
