# Standalone workspace — deliberately NOT a member of the repo-root
# workspace. This directory is designed to be extracted into its own
# repository (see PLAN.md §6) with `git mv` / `git filter-repo`; until
# then it builds independently against the repo's vendored sources
# (the root .cargo/config.toml source replacement applies here too).

[workspace]
resolver = "2"
members = [
    "coremuhash",
    "rootbundle",
]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false
