[package]
name = "dpf_pir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.dev]
opt-level = 3
panic = 'abort'