[package]
name = "pir-core-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for pir-core hash functions, codec, and PBC utilities"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pir-core = { path = "../pir-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
