[package]
name = "pir-db-attest"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Bitcoin PIR contributors"]
description = "Verifier primitives for BitcoinPIR attested-builder database build evidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
homepage = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
documentation = "https://docs.rs/pir-db-attest"
publish = false

[dependencies]
rootbundle = { path = "../attested-builder/rootbundle" }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
