[package]
name = "pir-sdk-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for PIR SDK: sync planning, delta merging, and types"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Include pir-core-wasm functions for a single unified WASM module
include-core = []

[dependencies]
pir-sdk = { path = "../pir-sdk" }
pir-core = { path = "../pir-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
