[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# Workspace-internal binary crate (reference PIR servers + CLI clients).
# Not a library — not published to crates.io.
publish = false

# NOTE: the legacy `server` bin (single-DB DPF/Harmony reference server) was
# removed — superseded by `unified_server`, which all production systemd
# services and scripts/start_pir_servers.sh launch.

[[bin]]
name = "unified_server"
path = "src/bin/unified_server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "onionpir_client"
path = "src/bin/onionpir_client.rs"

[[bin]]
name = "onionpir_bench"
path = "src/bin/onionpir_bench.rs"

# NOTE: `harmonypir_hint_server` (standalone HarmonyPIR hint server) was
# removed — superseded by `unified_server --serve-hints`.

[[bin]]
name = "harmonypir_e2e_test"
path = "src/bin/harmonypir_e2e_test.rs"

[[bin]]
name = "harmonypir_gen_hints"
path = "src/bin/harmonypir_gen_hints.rs"

[[bin]]
name = "harmonypir_real_test"
path = "src/bin/harmonypir_real_test.rs"

[[bin]]
name = "harmonypir_hint_bench"
path = "src/bin/harmonypir_hint_bench.rs"

# NOTE: the stale HarmonyPIR e2e/trace harnesses (harmonypir_index_to_chunk_e2e,
# harmonypir_full_e2e, harmonypir_batch_e2e, harmonypir_batch_trace) were
# removed — they were never migrated through the chain-derived-seed work
# (called the pre-parameterization derive_*_cuckoo_key signatures) and are
# superseded by the pir-sdk-client integration suite.

[features]
default = ["fastprp"]
fastprp = ["harmonypir/fastprp-prp", "harmonypir-wasm/fastprp"]
cuckoo-oram = ["dep:bitcoinpir-oram"]
harmony-oram = ["cuckoo-oram"]
# `alf` feature dropped 2026-05-12: ALF panics on domain<65536 (sibling
# Merkle tables hit this), causing pir-vpsbg crash loops. Use fastprp
# (large domains) or HoangPrp (default, all domains) instead.

[dependencies]
pir-core = { path = "../pir-core" }
pir-runtime-core = { path = "../pir-runtime-core" }
build = { path = "../build" }
libdpf = { git = "https://github.com/weikengchen/libdpf.git", rev = "8ceb5903ae38c6f16a5ee92c0706dd50f5a42110" }
onionpir = { git = "https://github.com/Bitcoin-PIR/OnionPIRv2-fork.git", rev = "3f815ba86bc8cb2db5d892a006c1ee7fcbaf7e4b" }
harmonypir = { git = "https://github.com/Bitcoin-PIR/harmonypir.git", rev = "60635d8e526629b2ba99ec5020a55d078a299660", default-features = false }
harmonypir-wasm = { path = "../harmonypir-wasm" }
libc = "0.2"
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bitcoinpir-oram = { git = "https://github.com/Bitcoin-PIR/oram.git", rev = "f73d787773aa52edb81e1924f66d4676faf117fb", optional = true }
