[package]
name = "coremuhash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MuHash3072 set hash, bit-compatible with Bitcoin Core's gettxoutsetinfo muhash"
publish = false

[dependencies]
# Pinned to the exact versions mirrored in ../../vendor so this nested
# workspace resolves offline against the repo's vendored sources.
crypto-bigint = { version = "=0.5.5", default-features = false }
sha2 = { version = "=0.10.9", default-features = false }

[dev-dependencies]
hex = "=0.4.3"
