[package]
name = "rootbundle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Canonical signed root bundle: binds PIR database Merkle roots to a chain anchor + muhash, with k-of-n Ed25519 verification"
publish = false

[dependencies]
# Same version/feature shape as pir-identity, resolves against ../../vendor.
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }

[dev-dependencies]
hex = "=0.4.3"
